Se crea la configuracion de mysql y se crea el contenedor en docker

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,13 @@
     "moduleResolution": "node", // Resolucion de modulos
     "baseUrl": "./src", // Carpeta base
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+        "@config/*": ["config/*"],
     },
+  },
     "include": ["**/*.ts"], // Archivos a compilar
     "exclude": ["node_modules"], // Archivos a excluir
     "ts-node": {
       "require": ["tsconfig-paths/register"] // Habilita el uso de tsconfig-paths
-    }
   }
 
 }
