--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.12.0",
+    "redis": "^4.7.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
