--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_AUTHENTICATION_PLUGIN: mysql_native_password
     ports:
       - ${MYSQL_PORT}:${MYSQL_DOCKER_PORT}
 
