--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,19 +13,9 @@ services:
       MYSQL_AUTHENTICATION_PLUGIN: mysql_native_password
     ports:
       - ${MYSQL_PORT}:${MYSQL_DOCKER_PORT}
+    volumes:
+      - ./mysql-init:/docker-entrypoint-initdb.d
 
-#  apiCoordinadora:
-#    build: .
-#    container_name: apiCoordinadora
-#    restart: always
-#    env_file: ./.env
-#    ports:
-#      - ${SERVER_PORT}:${SERVER_DOCKER_PORT}
-#    depends_on:
-#      - mysql
-#    links:
-#      - mysql*/
-  
   redis:
     image: redis
     container_name: redisCoordinadora
@@ -33,3 +23,22 @@ services:
     env_file: ./.env
     ports:
       - ${REDIS_PORT}:${REDIS_DOCKER_PORT}
+    depends_on:
+      - mysql      
+
+  api:
+    build: .
+    container_name: apiCoordinadora
+    restart: always
+    env_file: ./.env
+    environment:
+      IS_DOCKER: "true"
+    ports:
+      - ${SERVER_PORT}:${SERVER_DOCKER_PORT}
+    depends_on:
+      - mysql
+      - redis
+    links:
+      - mysql
+      - redis
+  
